Update existing examples

--- a/examples/non-node/readme-example-simple.html
+++ b/examples/non-node/readme-example-simple.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+	  /*
+
+	  EXAMPLE: readme-example-simple.html
+
+	  A working example from the README for the browser
+
+	  */
+	-->
 	<title></title>
 	<style>
 		.scrollable {
